hphp/hack/test/typecheck/reactive/only_first_error/references_in_rx2.php.exp
File "references_in_rx2.php", line 3, characters 17-17:
A type specifier is expected here. (Parsing[1002])
