hphp/hack/test/typecheck/reactive/only_first_error/references_in_rx2.php
<?hh // partial

function by_ref(&$ref) {}

<<__Rx>>
function foo(): void {
  $x = 1;
  by_ref(&$x); // bad
}
